Fix content-clipping bug in firefox

--- a/src/app/components/DualPartInterstitial/styles.less
+++ b/src/app/components/DualPartInterstitial/styles.less
@@ -28,6 +28,7 @@
   &__content {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
   }
 
   &__common {
